# asr-model-benchmark

./: .gitignore  LICENSE  README.md  config.yaml.example  pyproject.toml
dataset/TXT/: common_voice_fr_42698261.txt  common_voice_fr_42742044.txt  common_voice_fr_42806558.txt  common_voice_fr_42810175.txt  common_voice_fr_42810309.txt  common_voice_fr_42952052.txt  common_voice_fr_42996157.txt  common_voice_fr_43141262.txt  common_voice_fr_43199384.txt  common_voice_fr_43334998.txt  common_voice_fr_43341480.txt  common_voice_fr_43344312.txt  common_voice_fr_43345954.txt  common_voice_fr_43352844.txt  common_voice_fr_43352846.txt
scripts/: upload_dataset.py
transcription_benchmark/: main.py
transcription_benchmark/analysis/: __init__.py  wer.py
transcription_benchmark/parsing/: __init__.py  base_parser.py  chirp.py  gemini.py  groundtruth.py
transcription_benchmark/transcription/: __init__.py  base_transcriber.py  chirp.py  gemini.py
transcription_benchmark/utils/: __init__.py  config.py  constants.py  gcs.py  logging.py  retry.py
